# ARCH_labs_1_sem

./: LICENSE  README.md
lab1/: README.md  workspace.dsl
lab2/: .gitignore  CMakeLists.txt  Dockerfile  README.md  apply_patches.sh  docker-compose.yaml  openapi.yaml  start.sh
lab2/configs/: config_vars.yaml  static_config.yaml
lab2/configs/catalog-service/: static_config.yaml
lab2/configs/nginx/: nginx.conf
lab2/configs/order-service/: static_config.yaml
lab2/configs/user-service/: static_config.yaml
lab2/src/: auth.hpp  jwt.cpp  main.cpp  storage.cpp  storage.hpp
lab2/src/catalog-service/: main.cpp  storage.cpp  storage.hpp
lab2/src/catalog-service/handlers/: services_handler.cpp  services_handler.hpp
lab2/src/handlers/: auth_handler.cpp  auth_handler.hpp  order_services_handler.cpp  order_services_handler.hpp  orders_handler.cpp  orders_handler.hpp  services_handler.cpp  services_handler.hpp  swagger_handler.hpp  users_handler.cpp  users_handler.hpp
lab2/src/order-service/: main.cpp  storage.cpp  storage.hpp
lab2/src/order-service/handlers/: orders_handler.cpp  orders_handler.hpp
lab2/src/shared/: auth_middleware.hpp  dto.hpp  jwt.cpp  jwt.hpp
lab2/src/tests/: storage_test.cpp
lab2/src/user-service/: main.cpp  storage.cpp  storage.hpp
lab2/src/user-service/handlers/: auth_handler.cpp  auth_handler.hpp  email_handler.cpp  email_handler.hpp  swagger_handler.cpp  swagger_handler.hpp  users_handler.cpp  users_handler.hpp
lab2/tests/: conftest.py  test_api.py
lab3/: Dockerfile  README.md  data.sql  docker-compose.yaml  optimization.md  queries.sql  schema.sql
lab3/configs/: config_vars.yaml
lab3/configs/catalog-service/: static_config.yaml
lab3/configs/nginx/: nginx-local.conf  nginx.conf
lab3/configs/user-service/: static_config.yaml
lab4/: Dockerfile  Dockerfile.nginx  README.md  data.js  data.sql  docker-compose.yaml  queries.js  schema.sql  schema_design.md  validation.js
lab4/configs/: config_vars.yaml
lab4/configs/catalog-service/: static_config.yaml
lab4/configs/order-service/: static_config.yaml
lab5/: CMakeLists.txt  Dockerfile  Dockerfile.postgres  README.md  data.js  docker-compose.yaml  performance_design.md  schema.sql
lab5/configs/: config_vars.yaml
lab5/configs/catalog-service/: static_config.yaml
lab5/configs/order-service/: static_config.yaml
lab5/configs/user-service/: static_config.yaml
lab5/src/catalog-service/: main.cpp
lab5/src/catalog-service/handlers/: services_handler.cpp  services_handler.hpp
lab5/src/order-service/: main.cpp
lab5/src/shared/: redis_cache.cpp  redis_cache.hpp
lab5/src/user-service/: main.cpp
lab5/src/user-service/handlers/: auth_handler.cpp  auth_handler.hpp  users_handler.cpp  users_handler.hpp
lab6/: README.md  docker-compose.yaml  event_catalog.md  event_driven_design.md
lab6/consumer/: Dockerfile  consumer.py
lab6/producer/: Dockerfile  producer.py
